syntax = "proto2";

package com.github.igojeferson.contracts;

option java_multiple_files = true;
option java_package = "com.github.igojeferson.protobuf";
option java_outer_classname = "AddressBookProtos";

message Person {
  optional string name = 1;
  optional int32 id = 2;
  optional string email = 3;

  required Gender gender = 4;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  enum Gender {
    FEMALE = 0;
    MASCULINE = 1;
  }

  message PhoneNumber {
    optional string number = 1;
    optional PhoneType type = 2 [default = HOME];
  }

  repeated PhoneNumber phones = 5;
}

message AddressBook {
  repeated Person people = 1;
}